增加版本控制相关文件
Signed-off-by: guofeng <imeepwni@outlook.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /build
 /captures
 .externalNativeBuild
+libs/
+src/main/java/com/imeepwni/geoquiz/modelview/
+src/main/java/com/imeepwni/geoquiz/modle/
+src/main/res/drawable/
